created nav bar in the website

--- a/index.html
+++ b/index.html
@@ -5,9 +5,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product-Landing Page</title>
+    <link rel="stylesheet" href="./style.css">
+    <script src="./main.js"></script>
 </head>
 
 <body>
+    <header id="header">
+        <div id="navs">
+            <img src="./product-landing-page-logo.png" alt="logo-img" id="header-img">
+            <nav id="nav-bar">
+                <li class="nav-link"><a href="">Features</a></li>
+                <li class="nav-link"><a href="">How It Works</a></li>
+                <li class="nav-link"><a href="">Pricing</a></li>
+            </nav>
+        </div>
+        <!-- main title -->
+        <div id="form">
+            <p>Handcrafted,home-made masterpieces</p>
+            <div id="dum">
+                <input type="email" name="email" id="email" placeholder="Enter your email address">
+            </div>
+            <div id="primary-btn">
+                <input type="button" value="GET STARTED" id="submit">
+            </div>
+        </div>
+        <!-- features -->
+        <div></div>
+    </header>
 </body>
 
 </html>
