modified for moblie view

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Product-Landing Page</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="styles.css">
-    <script src="./main.js"></script>
 </head>
 
 <body>
@@ -16,46 +15,54 @@
             <div id="navs">
                 <img src="./product-landing-page-logo.png" alt="logo-img" id="header-img">
                 <nav id="nav-bar">
-                    <li class="nav-link"><a href="">Features</a></li>
-                    <li class="nav-link"><a href="">How It Works</a></li>
-                    <li class="nav-link"><a href="">Pricing</a></li>
+                    <li class="nav-link"><a href="#align ">Features</a></li>
+                    <li class="nav-link"><a href="#video">How It Works</a></li>
+                    <li class="nav-link"><a href="#check-2">Pricing</a></li>
                 </nav>
             </div>
         </div>
         <!-- main title -->
-        <form id="form">
+        <form id="form" action="https://www.freecodecamp.com/email-submit">
             <p>Handcrafted,home-made masterpieces</p>
             <div id="dum">
                 <input type="email" name="email" id="email" placeholder="Enter your email address">
             </div>
             <div id="primary-btn">
-                <input type="submit" value="GET STARTED" id="submit">
+                <a href="https://www.freecodecamp.com/email-submit" target="_blank" rel="noopener noreferrer"> <input
+                        type="submit" value="GET STARTED" id="submit"></a>
             </div>
         </form>
         <!-- features -->
         <div id="align">
             <div id="icons">
-                <img src="https://api.iconify.design/bi:fire.svg?color=%23ff8c00" alt="icons-fire" class="icons fire">
-                <img src="https://api.iconify.design/fa6-solid:truck.svg?color=%23ff8c00" alt="icons-fire"
-                    class="icons fire">
-                <img src="https://api.iconify.design/carbon:battery-half.svg?color=%23ff8c00" alt="icons-fire"
-                    class="icons fire">
             </div>
             <div id="main-content">
                 <!-- <div id="icons"> -->
                 <div class="features">
+                    <div id="iconed">
+                        <img src="https://api.iconify.design/bi:fire.svg?color=%23ff8c00" alt="icons-fire"
+                            class="icons fire">
+                    </div>
                     <p class="heading">Premium Materials</p>
                     <p>Our trombones use the shiniest brass which is sourced locally. This will increase the longevity
                         of
                         your purchase.</p>
                 </div>
                 <div class="features">
+                    <div id="iconed">
+                        <img src="https://api.iconify.design/fa6-solid:truck.svg?color=%23ff8c00" alt="icons-fire"
+                            class="icons fire">
+                    </div>
                     <p class="heading">Fast Shipping</p>
                     <p>We make sure you recieve your trombone as soon as we have finished making it. We also provide
                         free
                         returns if you are not satisfied.</p>
                 </div>
                 <div class="features">
+                    <div id="iconed">
+                        <img src="https://api.iconify.design/carbon:battery-half.svg?color=%23ff8c00" alt="icons-fire"
+                            class="icons fire">
+                    </div>
                     <p class="heading">Quality Assurance</p>
                     <p>For every purchase you make, we will ensure there are no damages or faults and we will check and
                         test
@@ -104,7 +111,7 @@
             </div>
         </div>
         <!-- footers  -->
-        <div id = "check-3">
+        <div id="check-3">
             <div id="footer-details">
                 <div id="footer">
                     <li><a href="#">Privacy</a></li>
@@ -115,6 +122,7 @@
             </div>
         </div>
     </header>
+    <script src="./main.js"></script>
 </body>
 
 </html>
