--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             <div id="navs">
                 <img src="./product-landing-page-logo.png" alt="logo-img" id="header-img">
                 <nav id="nav-bar">
-                    <li class="nav-link"><a href="#align ">Features</a></li>
-                    <li class="nav-link"><a href="#video">How It Works</a></li>
-                    <li class="nav-link"><a href="#check-2">Pricing</a></li>
+                    <li class="nav-link"><a href="#feature">Features</a></li>
+                    <li class="nav-link"><a href="#how-its-work">How It Works</a></li>
+                    <li class="nav-link"><a href="#footers">Pricing</a></li>
                 </nav>
             </div>
         </div>
@@ -33,9 +33,7 @@
             </div>
         </form>
         <!-- features -->
-        <div id="align">
-            <div id="icons">
-            </div>
+        <div id="feature">
             <div id="main-content">
                 <!-- <div id="icons"> -->
                 <div class="features">
@@ -43,39 +41,49 @@
                         <img src="https://api.iconify.design/bi:fire.svg?color=%23ff8c00" alt="icons-fire"
                             class="icons fire">
                     </div>
-                    <p class="heading">Premium Materials</p>
-                    <p>Our trombones use the shiniest brass which is sourced locally. This will increase the longevity
-                        of
-                        your purchase.</p>
+                    <div class="paras">
+                        <p class="heading">Premium Materials</p>
+                        <p>Our trombones use the shiniest brass which is sourced locally. This will increase the
+                            longevity
+                            of
+                            your purchase.</p>
+                    </div>
                 </div>
                 <div class="features">
                     <div id="iconed">
                         <img src="https://api.iconify.design/fa6-solid:truck.svg?color=%23ff8c00" alt="icons-fire"
                             class="icons fire">
                     </div>
-                    <p class="heading">Fast Shipping</p>
-                    <p>We make sure you recieve your trombone as soon as we have finished making it. We also provide
-                        free
-                        returns if you are not satisfied.</p>
+                    <div class="paras">
+                        <p class="heading">Fast Shipping</p>
+                        <p>We make sure you recieve your trombone as soon as we have finished making it. We also provide
+                            free
+                            returns if you are not satisfied.</p>
+                    </div>
                 </div>
                 <div class="features">
                     <div id="iconed">
                         <img src="https://api.iconify.design/carbon:battery-half.svg?color=%23ff8c00" alt="icons-fire"
-                            class="icons fire">
+                            class="icons battery-half">
                     </div>
-                    <p class="heading">Quality Assurance</p>
-                    <p>For every purchase you make, we will ensure there are no damages or faults and we will check and
-                        test
-                        the pitch of your instrument.</p>
+                    <div class="paras">
+                        <p class="heading">Quality Assurance</p>
+                        <p>For every purchase you make, we will ensure there are no damages or faults and we will check
+                            and
+                            test
+                            the pitch of your instrument.</p>
+                    </div>
                 </div>
             </div>
         </div>
         <!-- videos -->
-        <div class="iframe">
-            <iframe id="video" src="https://www.youtube.com/embed/y8Yv4pnO7qc" width="560" height="315"
-                title="Roman Carnival Overture Op. 9 for Five Trombones" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
+        <div id=how-its-work>
+            <div class="iframe">
+                <iframe id="video" src="https://www.youtube.com/embed/y8Yv4pnO7qc" width="560" height="315"
+                    title="Roman Carnival Overture Op. 9 for Five Trombones" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
+            </div>
         </div>
         <!-- Three cards -->
         <div id="check-2">
@@ -111,9 +119,9 @@
             </div>
         </div>
         <!-- footers  -->
-        <div id="check-3">
+        <div id="footer">
             <div id="footer-details">
-                <div id="footer">
+                <div id="footers">
                     <li><a href="#">Privacy</a></li>
                     <li><a href="#">Terms</a></li>
                     <li><a href="#">Contact</a></li>
