--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <img src="./product-landing-page-logo.png" alt="logo-img" id="header-img">
                 <nav id="nav-bar">
                     <li class="nav-link"><a href="#feature">Features</a></li>
-                    <li class="nav-link"><a href="#how-its-work">How It Works</a></li>
+                    <li class="nav-link"><a href="#iconed">How It Works</a></li>
                     <li class="nav-link"><a href="#footers">Pricing</a></li>
                 </nav>
             </div>
@@ -25,7 +25,7 @@
         <form id="form" action="https://www.freecodecamp.com/email-submit">
             <p>Handcrafted,home-made masterpieces</p>
             <div id="dum">
-                <input type="email" name="email" id="email" placeholder="Enter your email address">
+                <input type="search" name="email" id="email" placeholder="Enter your email address">
             </div>
             <div id="primary-btn">
                 <a href="https://www.freecodecamp.com/email-submit" target="_blank" rel="noopener noreferrer"> <input
